--- a/package.json
+++ b/package.json
@@ -2,11 +2,12 @@
   "name": "poc",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://x4d3.github.io/hello-dot-js-kit",
   "dependencies": {
-    "dot-document-auto-capture": "file:dot-document-auto-capture-lib.tgz",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "dot-document-auto-capture": "file:dot-document-auto-capture-lib.tgz",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
@@ -16,7 +17,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -35,5 +37,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^3.2.3"
   }
 }
